--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "message"
   ],
   "author": "Fangdun Cai <cfddream@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "vue-style-loader": "^1.0.0"
+  }
 }
